Solved some errors in ContactPage

--- a/updating-scripts/secy-csv-to-yaml/secys.yml
+++ b/updating-scripts/secy-csv-to-yaml/secys.yml
@@ -118,6 +118,13 @@ secys:
 		insta_id: sjais1337
 		github: sjais1337
 
+	'Shreyansh Rastogi':
+		hall: 12
+		mail: shreyanshr24@iitk.ac.in
+		number: 7459094300
+		insta_id: shreyanshrastogi23
+		github: Shreyansh120
+
 	'Sujal Satish Motagi':
 		hall: 12
 		mail: sujalsm24@iitk.ac.in
